--- a/src/components/atoms/Select/Select.scss
+++ b/src/components/atoms/Select/Select.scss
@@ -166,4 +166,8 @@
       stroke: var(--color-text-primary);
     }
   }
+
+  .selectMenuItem--selected {
+    background-color: rgba($colorPrimary, 0.3);
+  }
 }
