--- a/src/styles/Animations.scss
+++ b/src/styles/Animations.scss
@@ -71,3 +71,14 @@
     transform: translateX(100%);
   }
 }
+
+@keyframes popupIn {
+  0% { 
+    opacity: 0;
+    transform: scale(0.9);
+  }
+  100% { 
+    opacity: 1;
+    transform: scale(1);
+  }
+}
