--- a/src/styles/Components.scss
+++ b/src/styles/Components.scss
@@ -13,6 +13,7 @@
 @import "@atoms/Loader/Loader.scss";
 @import "@atoms/Logo/Logo.scss";
 @import "@atoms/Message/Message.scss";
+@import "@atoms/PopConfirm/PopConfirm.scss";
 @import "@atoms/Select/Select.scss";
 @import "@atoms/SidebarHeader/SidebarHeader.scss";
 @import "@atoms/SkeletonItem/SkeletonItem.scss";
