--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -66,7 +66,7 @@ $shadowDropdown: 0px 4px 12px 2px rgba(0, 0, 0, 0.14);
 $shadowInputError: 0 0 0 2px rgba($colorError, 0.3);
 $shadowInputWarning: 0 0 0 2px rgba($colorWarning, 0.3);
 $shadowPopup: 0px 0px 6px 4px rgba(0, 0, 0, 0.09);
-$shadowPopupDark: 0px 0px 6px 4px #{rgba($colorErrorDark, 0.2)};
+$shadowPopupDark: 0px 0px 6px 4px rgba(255, 255, 255, 0.06);
 
 /**
   * ====== MEDIA QUERIES ======
