Novel super efficient import process

--- a/src/components/atoms/Tag/Tag.scss
+++ b/src/components/atoms/Tag/Tag.scss
@@ -36,3 +36,18 @@
     }
   }
 }
+
+.tagList {
+  $base: &;
+
+  &--vertical {
+    #{$base}__tags {
+      display: flex;
+      flex-direction: column;
+
+      .tag {
+        width: fit-content;
+      }
+    }
+  }
+}
