--- a/src/components/organisms/InvestmentTimeline/InvestmentTimeline.scss
+++ b/src/components/organisms/InvestmentTimeline/InvestmentTimeline.scss
@@ -1,9 +1,11 @@
 .investmentTimeline {
   margin-left: -$halfUnit;
   margin-right: -$halfUnit;
+  padding-bottom: $unit * 1.5;
   display: flex;
   flex-direction: column;
   gap: $halfUnit;
+  position: relative;
 
   &__header {
     display: flex;
