--- a/src/components/templates/DashboardBody/DashboardBody.scss
+++ b/src/components/templates/DashboardBody/DashboardBody.scss
@@ -1,6 +1,4 @@
 .dashboardBody {
-  $base: &;
-
   padding: $unit * 1.5 3%;
 
   &__insights {
@@ -8,20 +6,14 @@
   }
 
   &__cards {
-    $gap: $unit * 0.75;
+    gap: $unit * 0.75;
+    display: flex;
+    flex-direction: column;
+  }
 
+  &__columns {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: $gap;
-
-    #{$base}__column {
-      display: flex;
-      flex-direction: column;
-      gap: $gap;
-
-      &--double {
-        grid-column: span 2;
-      }
-    }
+    gap: $unit;
   }
 }
