--- a/src/styles/Components.scss
+++ b/src/styles/Components.scss
@@ -7,6 +7,7 @@
 @import "@atoms/Drawer/Drawer.scss";
 @import "@atoms/Empty/Empty.scss";
 @import "@atoms/Header/Header.scss";
+@import "@atoms/Info/Info.scss";
 @import "@atoms/Insight/Insight.scss";
 @import "@atoms/Input/Input.scss";
 @import "@atoms/KeyValue/KeyValue.scss";
@@ -44,6 +45,7 @@
 @import "@organisms/DashChartCard/DashChartCard.scss";
 @import "@organisms/InvestmentTimeline/InvestmentTimeline.scss";
 @import "@organisms/SetPredictionSidebar/SetPredictionSidebar.scss";
+@import "@organisms/SpendingAnalyticsCard/SpendingAnalyticsCard.scss";
 @import "@organisms/TransactionSidebar/TransactionSidebar.scss";
 @import "@organisms/ImportConfigForm/ImportConfigForm.scss";
 
