Calibrate balances feature added, number rounding fix, currency input bug entering 0 fixed, Tag onclick added

--- a/src/components/atoms/Button/Button.scss
+++ b/src/components/atoms/Button/Button.scss
@@ -56,8 +56,8 @@
   &--disabled {
     cursor: not-allowed;
     box-shadow: none !important;
-    color: var(--shade20);
-    background-color: var(--shade5);
+    color: var(--shade40) !important;
+    background-color: var(--shade5) !important;
     border: $disabledBorderStyle;
 
     &:hover {
