--- a/src/styles/Components.scss
+++ b/src/styles/Components.scss
@@ -23,6 +23,9 @@
 @import "@atoms/Tag/Tag.scss";
 
 @import "@molecules/BorrowList/BorrowList.scss";
+@import "@molecules/CalibrateCurrencyTable/CalibrateCurrencyTable.scss";
+@import "@molecules/CalibrateFixOptions/CalibrateFixOptions.scss";
+@import "@molecules/CalibrateLatestInput/CalibrateLatestInput.scss";
 @import "@molecules/CreateInvestmentDrawer/CreateInvestmentDrawer.scss";
 @import "@molecules/CreateUpdatePredictionForm/CreateUpdatePredictionForm.scss";
 @import "@molecules/CreateUpdateTransactionForm/CreateUpdateTransactionForm.scss";
@@ -41,6 +44,7 @@
 @import "@molecules/TransactionSearchForm/TransactionSearchForm.scss";
 
 @import "@organisms/AddTimelineEvent/AddTimelineEvent.scss";
+@import "@organisms/CalibrateDrawer/CalibrateDrawer.scss";
 @import "@organisms/DashCategorySpendingCard/DashCategorySpendingCard.scss";
 @import "@organisms/DashChartCard/DashChartCard.scss";
 @import "@organisms/InvestmentTimeline/InvestmentTimeline.scss";
