--- a/src/styles/Themes.scss
+++ b/src/styles/Themes.scss
@@ -12,6 +12,7 @@ $themeLightClass: ".theme--light";
   --bg-mask: rgba(0, 0, 0, 0.3);
   --color-border: #dfdfdf;
   --color-error-outline: #{mix($shade0, $colorError, 25%)};
+  --color-success-outline: #{mix($shade0, $colorSuccess, 25%)};
   --color-placeholder: #95939D;
   --color-primary: #{$colorPrimary};
   --color-primary-20: #{rgba($colorPrimary, 0.15)};
@@ -60,6 +61,7 @@ $themeLightClass: ".theme--light";
 
   --color-border: #454545;
   --color-error-outline: #{mix($shade0, $colorError, 40%)};
+  --color-success-outline: #{mix($shade0, $colorSuccess, 40%)};
   --color-placeholder: #95939D;
   --color-primary: #{$colorPrimaryDark};
   --color-primary-20: #{rgba($colorPrimaryDark, 0.3)};
