Import drawer refactoring

--- a/src/styles/Components.scss
+++ b/src/styles/Components.scss
@@ -40,6 +40,7 @@
 @import "@molecules/Pagination/Pagination.scss";
 @import "@molecules/Tabs/Tabs.scss";
 @import "@molecules/TransactionFullList/TransactionFullList.scss";
+@import "@molecules/TransactionItem/TransactionItem.scss";
 @import "@molecules/TransactionList/TransactionList.scss";
 @import "@molecules/TransactionSearchForm/TransactionSearchForm.scss";
 
@@ -48,6 +49,7 @@
 @import "@organisms/DashCategorySpendingCard/DashCategorySpendingCard.scss";
 @import "@organisms/DashChartCard/DashChartCard.scss";
 @import "@organisms/InvestmentTimeline/InvestmentTimeline.scss";
+@import "@organisms/ImportDetails/ImportDetails.scss";
 @import "@organisms/ExpectationsSidebar/ExpectationsSidebar.scss";
 @import "@organisms/SpendingAnalyticsCard/SpendingAnalyticsCard.scss";
 @import "@organisms/TransactionSidebar/TransactionSidebar.scss";
