--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -33,6 +33,7 @@ $shade20: #cbcbcb;
 $shade15: #ddd;
 $shade10: #eee;
 $shade5: #f5f5f5;
+$shade2: #f7f7f7;
 $shade0: #fff;
 
 $colorPrimary: #4a63a3;
